Base mode completed

--- a/index.html
+++ b/index.html
@@ -12,20 +12,37 @@
 </head>
 <body>
 
+    <!-- First Name Input -->
     <label for="empFirstName">First Name</label>
     <input type="text" placeholder="First Name" id="empFirstName">
 
+    <!-- Last Name Input -->
     <label for="empLastName">Last Name</label>
     <input type="text" placeholder="Last Name" id="empLastName">
 
+    <!-- ID Number Input -->
     <label for="empIDNum">ID Number</label>
     <input type="text" placeholder="ID Number" id="empIDNum">
     
+    <!-- Job Title input -->
     <label for="empTitle">Job Title</label>
     <input type="text" placeholder="Job Title" id="empTitle">
 
+    <!-- Employee Salary Input -->
     <label for="empSalary">Annual Salary</label>
     <input type="text" placeholder="Annual Salary" id="empSalary">
+
+    <!-- Submit Button -->
+    <button id="submitInfoBtn">Submit</button>
+
+    <div>
+        <ul id="displayInfo">       
+        </ul>
+    </div>
+
+    <div id="displayMonthlyCost">
+
+    </div>
     
 </body>
 </html>
