--- a/index.html
+++ b/index.html
@@ -53,13 +53,26 @@
             </div>
         </div>
 
-        <div>
-            <ul id="displayInfo">       
-            </ul>
+        <div id="table">
+            <table class="table table-striped table-bordered">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">First Name</th>
+                        <th scope="col">Last Name</th>
+                        <th scope="col">ID Number</th>
+                        <th scope="col">Job Title</th>
+                        <th scope="col">Anual Salary</th>
+                        <th scope="col">Remove</th>
+                    </tr>
+                </thead>
+                <!-- This is where employee info will be displayed -->
+                <tbody id="displayInfo">
+                </tbody>
+            </table>
         </div>
 
+        <!-- This is where the monthly cost will be displayed -->
         <div id="displayMonthlyCost">
-
         </div>
 
     </div>
