--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
     <script src="scripts.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Montserrat&display=swap" rel="stylesheet">
 
 </head>
 <body>
 
-    <div class="container">
+    <div class="container bodyContainer">
     
         <!-- Jumbotron -->
         <div class="jumbotron">
-            <h1>Monthly Salary Calculator</h1>
+            <h1>MONTHLY SALARY CALCULATOR</h1>
         </div>
+
+        <div id="inputDiv"></div> <!-- alerts when not all inputs are filled -->
 
         <!-- Inputs -->
         <div class="row row-cols-6">
